Add dummy grid markup

--- a/index.html
+++ b/index.html
@@ -8,7 +8,76 @@
   </head>
   <body>
     <main>
-      Some grids.
+  
+      <section class="fluid">
+        <h1>Fluid</h1>
+        <ul class="grid-container">
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+        </ul>
+      </section>
+      
+      <section class="responsive">
+        <h1>Responsive</h1>
+        <ul class="grid-container">
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+        </ul>
+      </section>
+
+      <section class="explicitly-placed">
+        <h1>Explicitly Placed</h1>
+        <ul class="grid-container">
+        <li><img src=""></li>
+        <li><img src=""></li>
+        <li><img src=""></li>
+        <li><img src=""></li>
+        <li><img src=""></li>
+        </ul>
+      </section>
+
+      <section class="overlapping">
+        <h1>Overlapping</h1>
+        <ul class="grid-container">
+          <li><img src=""></li>
+          <li><img src=""></li>
+          <li><img src=""></li>
+        </ul>
+      </section>
+
    </main>  
   </body>
 </html>
