Replace bear placeholder with static bear :(

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
       <section class="fluid">
         <h1>Fluid</h1>
         <ul class="grid-container">
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
         </ul>
         <div class="explanation">
           <h4>.grid-container</h4>
@@ -43,21 +43,21 @@
       <section class="responsive">
         <h1>Responsive</h1>
         <ul class="grid-container">
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
         </ul>
         <div class="explanation">
           <h4>.grid-container</h4>
@@ -70,11 +70,11 @@
       <section class="explicitly-placed">
         <h1>Explicitly Placed</h1>
         <ul class="grid-container">
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
         </ul>
         <div class="explanation">
           <h4>.grid-container</h4>
@@ -108,9 +108,9 @@
       <section class="overlapping">
         <h1>Overlapping</h1>
         <ul class="grid-container">
-          <li><img src="https://placebear.com/g/600/600"></li>
-          <li><img src="https://placebear.com/g/600/900"></li>
-          <li><img src="https://placebear.com/g/600/600"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear2.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
         </ul>
         <div class="explanation">
           <h4>.grid-container</h4>
@@ -132,7 +132,6 @@
           <div><p>z-index: 2;</p></div>
         </div>
       </section>
-
-   </main>  
+    </main>  
   </body>
 </html>
