--- a/index.html
+++ b/index.html
@@ -133,6 +133,6 @@
         </div>
       </section>
     </main>  
-    <script src="js/app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
