--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/fluid.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/masonry-1.css">
+    <link rel="stylesheet" href="css/masonry-2.css">
     <link rel="stylesheet" href="css/explicit.css">
     <link rel="stylesheet" href="css/overlap.css">
   </head>
   <body>
     <main>
-  
       <section class="fluid">
         <h1>Fluid</h1>
         <ul class="grid-container">
@@ -34,9 +35,8 @@
         <div class="explanation">
           <h4>.grid-container</h4>
           <div><p>display: grid;</p></div>
-          <div><p>grid-template-columns: repeat(7, 1fr);</p></div>
           <div><p>grid-gap: 20px;</p></div>
-          <div><p>max-width: 100%;</p></div>
+          <div><p>grid-template-columns: repeat(7, 1fr);</p></div>
         </div>
       </section>
       
@@ -62,8 +62,79 @@
         <div class="explanation">
           <h4>.grid-container</h4>
           <div><p>display: grid;</p></div>
-          <div><p>grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));</p></div>
           <div><p>grid-gap: 20px;</p></div>
+          <div><p>grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));</p></div>
+        </div>
+      </section>
+
+      <section class="masonry-1">
+        <h1>Masonry I</h1>
+        <ul class="grid-container">
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+          <li><img src="img/bear.jpg"></li>
+        </ul>
+        <div class="explanation">
+          <h4>.grid-container</h4>
+          <div><p>display: grid;</p></div>
+          <div><p>grid-gap: 10px;</p></div>
+          <div><p>grid-template-columns: 200px 200px 620px;</p></div>
+
+          <h4>li:nth-child(1)</h4>
+          <div><p>grid-column: 1 / 3;</p></div>
+          <div><p>grid-row: 1;</p></div>
+
+          <h4>li:nth-child(2)</h4>
+          <div><p>grid-column: 3;</p></div>
+          <div><p>grid-row: 1 / 3;</p></div>
+
+          <h4>li:nth-child(3)</h4>
+          <div><p>grid-column: 1;</p></div>
+          <div><p>grid-row: 2;</p></div>
+
+          <h4>li:nth-child(4)</h4>
+          <div><p>grid-column: 2;</p></div>
+          <div><p>grid-row: 2;</p></div>
+
+        </div>
+      </section>
+
+      <section class="masonry-2">
+        <h1>Masonry II</h1>
+        <ul class="grid-container">
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+        <div class="explanation">
+          <h4>.grid-container</h4>
+          <div><p>display: grid;</p></div>
+          <div><p>grid-gap: 20px;</p></div>
+          <div><p>grid-template-columns: [col] 20% [col] 20% [col] 20% [col] 20%;</p></div>
+
+          <h4>li:nth-child(1)</h4>
+          <div><p>grid-column: col / span 2;</p></div>
+          <div><p>grid-row: row;</p></div>
+
+          <h4>li:nth-child(2)</h4>
+          <div><p>grid-column: col 3 / span 2;</p></div>
+          <div><p>grid-row: row;</p></div>
+
+          <h4>li:nth-child(3)</h4>
+          <div><p>grid-column: col;</p></div>
+          <div><p>grid-row: row 2;</p></div>
+
+          <h4>li:nth-child(4)</h4>
+          <div><p>grid-column: col 2 / span 3;</p></div>
+          <div><p>grid-row: row 2;</p></div>
+
+          <h4>li:nth-child(5)</h4>
+          <div><p>grid-column: col / span 4;</p></div>
+          <div><p>grid-row: row 3;</p></div>
+
         </div>
       </section>
 
@@ -79,9 +150,9 @@
         <div class="explanation">
           <h4>.grid-container</h4>
           <div><p>display: grid;</p></div>
-          <div><p>grid-template-columns: repeat(4, 1fr);</p></div>
           <div><p>max-width: 900px;</p></div>
           <div><p>grid-gap: 20px;</p></div>
+          <div><p>grid-template-columns: repeat(4, 1fr);</p></div>
 
           <h4>li:nth-child(1)</h4>
           <div><p>grid-column: 2 / 3;</p></div>
