Add support warning

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   </head>
   <body>
     <main>
+      <section>
+        <p class="no-support">
+          Oh dear, your browser doesn't support CSS grid yet. It shipped in Firefox 52 on 7th March 2017, Chrome 57 on 10th March, and will ship in Safari soon. If you are in fact using a supported browser, you may need to force-upgrade.
+        </p>
+      </section>
       <section class="fluid">
         <h1>Fluid</h1>
         <ul class="grid-container">
