--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <h4>ul</h4>
           <div><p>display: grid;</p></div>
           <div><p>grid-gap: 10px;</p></div>
-          <div><p>grid-template-columns: 200px 200px 620px;</p></div>
+          <div><p>grid-template-columns: 0.3fr 0.3fr;</p></div>
 
           <h4>li:nth-child(1)</h4>
           <div><p>grid-column: 1 / 3;</p></div>
@@ -125,26 +125,25 @@
           <h4>ul</h4>
           <div><p>display: grid;</p></div>
           <div><p>grid-gap: 20px;</p></div>
-          <div><p>grid-template-columns: [col] 20% [col] 20% [col] 20% [col] 20%;</p></div>
 
           <h4>li:nth-child(1)</h4>
-          <div><p>grid-column: col / span 2;</p></div>
+          <div><p>grid-column: 1 / 4;</p></div>
           <div><p>grid-row: row;</p></div>
 
           <h4>li:nth-child(2)</h4>
-          <div><p>grid-column: col 3 / span 2;</p></div>
+          <div><p>grid-column: 4 / 8;</p></div>
           <div><p>grid-row: row;</p></div>
 
           <h4>li:nth-child(3)</h4>
-          <div><p>grid-column: col;</p></div>
+          <div><p>grid-column: 1 / 3;</p></div>
           <div><p>grid-row: row 2;</p></div>
 
           <h4>li:nth-child(4)</h4>
-          <div><p>grid-column: col 2 / span 3;</p></div>
+          <div><p>grid-column: 3 / 8;</p></div>
           <div><p>grid-row: row 2;</p></div>
 
           <h4>li:nth-child(5)</h4>
-          <div><p>grid-column: col / span 4;</p></div>
+          <div><p>grid-column: 1 / 8;</p></div>
           <div><p>grid-row: row 3;</p></div>
 
         </div>
