--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/masonry-1.css">
     <link rel="stylesheet" href="css/masonry-2.css">
+    <link rel="stylesheet" href="css/masonry-3.css">
     <link rel="stylesheet" href="css/negative-space.css">
     <link rel="stylesheet" href="css/explicit.css">
     <link rel="stylesheet" href="css/overlap.css">
@@ -150,6 +151,46 @@
         </div>
       </section>
 
+      <section class="masonry-3">
+        <h1>Masonry III</h1>
+
+        <ul class="grid-container">
+          <li>1</li>
+          <li>2</li>
+          <li>3</li>
+          <li>4</li>
+          <li>5</li>
+          <li>6</li>
+          <li>7</li>
+          <li>8</li>
+          <li>9</li>
+          <li>10</li>
+          <li>11</li>
+          <li>12</li>
+        </ul>
+
+        <div class="explanation">
+          <h4>ul</h4>
+          <div><p>display: grid;</p></div>
+          <div><p>grid-template-columns: 1fr 0.5fr 1fr 2fr 1fr;</p></div>
+
+          <h4>li:nth-child(1)</h4>
+          <div><p>grid-column: 1;</p></div>
+          <div><p>grid-row: 1;</p></div>
+
+          <h4>li:nth-child(2)</h4>
+          <div><p>grid-column: 2 / span 2;</p></div>
+          <div><p>grid-row: 1 / span 2;</p></div>
+
+          <h4>li:nth-child(3)</h4>
+          <div><p>grid-row: 1 / span 4;</p></div>
+
+          <h4>li:nth-child(11)</h4>
+          <div><p>grid-column: 1 / span 3;</p></div>
+
+        </div>
+      </section>
+
       <section class="negative-space">
         <h1>Negative space</h1>
         <ul class="grid-container">
@@ -242,7 +283,6 @@
     <a href="https://twitter.com/siimonevans" class="twitter">
       <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1.414"><path d="M16 3.038c-.59.26-1.22.437-1.885.517.677-.407 1.198-1.05 1.443-1.816-.634.37-1.337.64-2.085.79-.598-.64-1.45-1.04-2.396-1.04-1.812 0-3.282 1.47-3.282 3.28 0 .26.03.51.085.75-2.728-.13-5.147-1.44-6.766-3.42C.83 2.58.67 3.14.67 3.75c0 1.14.58 2.143 1.46 2.732-.538-.017-1.045-.165-1.487-.41v.04c0 1.59 1.13 2.918 2.633 3.22-.276.074-.566.114-.865.114-.21 0-.41-.02-.61-.058.42 1.304 1.63 2.253 3.07 2.28-1.12.88-2.54 1.404-4.07 1.404-.26 0-.52-.015-.78-.045 1.46.93 3.18 1.474 5.04 1.474 6.04 0 9.34-5 9.34-9.33 0-.14 0-.28-.01-.42.64-.46 1.2-1.04 1.64-1.7z" fill-rule="nonzero"/></svg>
     </a>
-
     <script src="app.js"></script>
   </body>
 </html>
