--- a/index.html
+++ b/index.html
@@ -155,18 +155,18 @@
         <h1>Masonry III</h1>
 
         <ul class="grid-container">
-          <li>1</li>
-          <li>2</li>
-          <li>3</li>
-          <li>4</li>
-          <li>5</li>
-          <li>6</li>
-          <li>7</li>
-          <li>8</li>
-          <li>9</li>
-          <li>10</li>
-          <li>11</li>
-          <li>12</li>
+          <li><div>1</div></li>
+          <li><div>2</div></li>
+          <li><div>3</div></li>
+          <li><div>4</div></li>
+          <li><div>5</div></li>
+          <li><div>6</div></li>
+          <li><div>7</div></li>
+          <li><div>8</div></li>
+          <li><div>9</div></li>
+          <li><div>10</div></li>
+          <li><div>11</div></li>
+          <li><div>12</div></li>
         </ul>
 
         <div class="explanation">
