--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <title>Simon Evans - CSS Grid</title>
+    <title>CSS Grid examples</title>
   </head>
   <body>
     <div id="root"></div>
