--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <meta name="theme-color" content="#1F3AC1">
+    <link rel="icon" href="favicon/favicon.ico">
     <title>CSS Grid examples</title>
   </head>
   <body>
