--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <meta name="theme-color" content="#1F3AC1">
+    <meta name="description" content="CSS grid showcase - examples of the CSS grid property.">
     <link rel="icon" href="favicon/favicon.ico">
-    <title>CSS Grid examples</title>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <title>CSS Grid showcase</title>
   </head>
   <body>
     <div id="root"></div>
