--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="CSS grid showcase - examples of the CSS grid property.">
     <link rel="icon" href="favicon/favicon.ico">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <title>CSS Grid showcase</title>
+    <title>CSS grid showcase</title>
   </head>
   <body>
     <div id="root"></div>
